openshift/prod/frontend-prod-route.yaml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  host: 34.207.103.20.nip.io
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-03-31T19:46:37Z
      status: "True"
      type: Admitted
    host: 34.207.103.20.nip.io
    routerName: router
    wildcardPolicy: None
